Fix problem where navigation buttons appeared squashed on smaller devices.

--- a/client/src/pages/Calendar.css
+++ b/client/src/pages/Calendar.css
@@ -86,10 +86,10 @@
 
 .button-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 40px;
-    width: 20%;
+    gap: 150px;
 }
 
 .toggle-view-button,
